--- a/src/component/home/profile/CompleteProfile.css
+++ b/src/component/home/profile/CompleteProfile.css
@@ -38,7 +38,7 @@
 .square-div-complete-profile {
     margin-top: 30px;
     float: left;
-    height: 500px;
+    height: 100%;
     width: 47%;
     border-right: 2em solid #9357F7;
     border-right-style: inset;
@@ -52,7 +52,7 @@
 .square2-div-complete-profile {
     margin-left: 2%;
     float: left;
-    height: 500px;
+    height: 100%;
     margin-top: 30px;
     width: 47%;
     text-align: start;
@@ -65,6 +65,7 @@
 }
 
 .two-squares-complete-profile{
+    height: 53%;
     width: 100%;
     display: flex;
 }
