--- a/src/component/home/usertabhome/UserTabHome.css
+++ b/src/component/home/usertabhome/UserTabHome.css
@@ -78,3 +78,12 @@ table tbody tr{
 .menu-eliminate-1 {
     margin-left: 5%;
 }
+
+.menu-item-profile {
+    color: black;
+    text-decoration-line: none
+}   
+
+.menu-item-eliminar-profile {
+    color: red i !important;
+}
